--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "rocketchat-js-mobile-sdk",
-  "version": "1.3.0-mobile",
+  "version": "1.3.1",
   "description": "Node.js SDK for Rocket.Chat. Application interface for server methods and message streams.",
   "main": "index.ts",
   "types": "index.d.ts",
   "sideEffects": false,
-  "repository": "https://github.com/zblash/Rocket.Chat.js.SDK-Mobile.git",
-  "author": "Yusuf Can (zblash) Celik",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zblash/Rocket.Chat.js.SDK-Mobile.git"
+  },
+  "author": "Yusuf Can (zblash)",
   "license": "MIT",
   "private": false,
   "keywords": [
@@ -84,5 +87,12 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "bugs": {
+    "url": "https://github.com/zblash/Rocket.Chat.js.SDK-Mobile/issues"
+  },
+  "homepage": "https://github.com/zblash/Rocket.Chat.js.SDK-Mobile#readme",
+  "directories": {
+    "lib": "lib"
   }
 }
